# python-markdownify

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: ci.yaml  pr-title.yaml  python-app.yml  python-publish.yml  release.yaml
html_to_markdown/: __init__.py  __main__.py  cli.py  constants.py  converters.py  legacy.py  processing.py  utils.py
html_to_markdown.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
markdownify/: __init__.py  main.py  pkgmeta.py  py.typed
tests/: cli_test.py  conftest.py  converters_test.py  integration_test.py  module_test.py  processing_test.py  test_advanced.py  test_args.py  test_basic.py  test_conversions.py  test_custom_converter.py  test_escaping.py  test_lists.py  test_newlines.py  test_tables.py  utils.py
