[metadata]
name = markdownify
author = Matthew Tretter
author_email = m@tthewwithanm.com
description = Convert HTML to markdown.
url = http://github.com/matthewwithanm/python-markdownify
download_url = http://github.com/matthewwithanm/python-markdownify/tarball/master
long_description = file: README.rst
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.5
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
zip_safe = False
install_requires = beautifulsoup4>=4.9,<5; six>=1.15,<2
include_package_data = True

[options.packages.find]
include = markdownify, markdownify.*

[options.entry_points]
console_scripts = markdownify = markdownify.main:main
